--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
     <!-- Header -->
     <!-- Header -->
 
+    <!-- Dream_House -->
+    <!-- Dream_House -->
+    <!-- Dream_House -->
     <div class="build_your">
         <div class="dream_container">
             
@@ -59,5 +62,41 @@
             </div>
         </div>
     </div>
+    <!-- Dream_House -->
+    <!-- Dream_House -->
+    <!-- Dream_House -->
+
+    <!-- Room -->
+    <!-- Room -->
+    <!-- Room -->
+    <div class="room">
+        <div class="room_container">
+            <div class="content_room">
+                <h2>
+                    Build professional <br> valuable room
+                </h2>
+
+                
+            <div class="nav_room">
+                <div class="nav_rom_1">
+                    <img src="img/left.svg" alt="">
+                    <img src="img/right.svg" alt="">
+                </div>
+            </div>
+            </div>
+
+
+            <div class="photo_scroller_room">
+                <img src="img/img-01.png" alt="">
+                <img src="img/img-02.png" alt="">
+                <img src="img/img-03.png" alt="">
+                <img src="img/img-04.png" alt="">
+            </div>
+        </div>
+    </div>
+    <!-- Room -->
+    <!-- Room -->
+    <!-- Room -->
+
 </body>
 </html>
